--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+  background-color: black;
 }
 .center img {
   max-width: 100%;
