--- a/index.html
+++ b/index.html
@@ -1,25 +1,34 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<style>
-.center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  background-color: black;
-}
-.center img {
-  max-width: 100%;
-  max-height: 100%;
-}
-</style>
+    <style>
+        body {
+            background-color: black;
+            margin: 0;
+            padding: 0;
+        }
+
+        .center {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
+        .center img {
+            max-width: 100%;
+            max-height: 100%;
+        }
+    </style>
 </head>
+
 <body>
 
-<div class="center">
-  <img src="Skynet_Terminator_logo.png" alt="Cyberdyne Systems Logo">
-</div>
+    <div class="center">
+        <img src="Skynet_Terminator_logo.png" alt="Cyberdyne Systems Logo">
+    </div>
 
 </body>
+
 </html>
